--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     	<div id="display"></div>
     </section>
 
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/cardClass.js"></script>
+    <script type="text/javascript" src="js/deckClass.js"></script>
+
 
 </body>
 </html>
