trying again to make class methods

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section id="menu">
       <ul>
-        <li><button type="button" class="btn btn-primary" onclick="playGame()">Play Blackjack!</button></li>
+        <li><button type="button" class="btn btn-primary" onclick="showDeck(testDeck.deck)">Play Blackjack!</button></li>
         <li><button type="button" class="btn btn-primary" onclick="getBalance()">See your balance</button></li>
       </ul>
     </section>
