--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <section id="menu">
       <ul>
-        <li><button type="button" class="btn btn-primary" onclick="showDeck(testDeck.deck)">Play Blackjack!</button></li>
-        <li><button type="button" class="btn btn-primary" onclick="getBalance()">See your balance</button></li>
+        <li><button type="button" class="btn btn-primary" onclick="testDeck.showDeck()">Play Blackjack!</button></li>
+        <li><button type="button" class="btn btn-primary" onclick="testDeck.shuffleDeck()">See your balance</button></li>
       </ul>
     </section>
 
